# world-cup-briefers

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
data/: blank_report.yaml  schema_reference.yaml
docs/: automation_prompt.md  development.md  schema.md
examples/: haiti_scotland_dossier.yaml
scripts/: build_report.py
src/world_cup_briefers/: __init__.py  cli.py  flags.py  render.py  schema.py
src/world_cup_briefers/templates/: report.html.j2  report.md.j2
templates/: report_template.html
tests/: conftest.py  test_cli.py  test_render.py  test_schema.py
