[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-briefers"
version = "0.1.0"
description = "YAML-driven FIFA World Cup match dossier renderer for HTML and Markdown briefers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Cox" }]
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
world-cup-briefer = "world_cup_briefers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
world_cup_briefers = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
